--- a/app/src/main/res/layout/activity_data_view.xml
+++ b/app/src/main/res/layout/activity_data_view.xml
@@ -9,11 +9,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.pixedar.weather.DataView">
 
-    <TextView
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="No data"
-        android:id="@+id/dataTextView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/scrollView" >
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="No data"
+            android:id="@+id/dataTextView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+    </ScrollView>
 </RelativeLayout>
