--- a/app/src/main/res/layout/activity_data_view.xml
+++ b/app/src/main/res/layout/activity_data_view.xml
@@ -9,17 +9,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.pixedar.weather.DataView">
 
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/scrollView" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
+        <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="230dp" />
+
+        <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/chart2"
+            android:layout_width="match_parent"
+            android:layout_height="230dp" />
+
+        <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="No data"
-            android:id="@+id/dataTextView"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
-    </ScrollView>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/dataTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="No data" />
+
+        </ScrollView>
+
+
+    </LinearLayout>
 </RelativeLayout>
