--- a/app/src/main/res/layout/activity_data_view.xml
+++ b/app/src/main/res/layout/activity_data_view.xml
@@ -19,32 +19,38 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
             <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/chart"
                 android:layout_width="match_parent"
-                android:layout_height="256dp" />
+                android:layout_height="270dp" />
 
             <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/chart3"
                 android:layout_width="match_parent"
-                android:layout_height="256dp" />
+                android:layout_height="270dp" />
 
 
             <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/chart4"
                 android:layout_width="match_parent"
-                android:layout_height="256dp" />
+                android:layout_height="270dp" />
 
             <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/chart2"
                 android:layout_width="match_parent"
-                android:layout_height="256dp" />
+                android:layout_height="270dp" />
 
 
-
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/seekBar"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:id="@+id/dataTextView"
+                android:lines="2"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:text="No data" />
