--- a/app/src/main/res/layout/activity_data_view.xml
+++ b/app/src/main/res/layout/activity_data_view.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/entire_view"
     tools:context="com.pixedar.weather.DataView">
 
     <ScrollView
@@ -18,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
 
 
             <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
@@ -42,12 +42,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="270dp" />
 
-            <SeekBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/seekBar"
-                android:layout_gravity="center_horizontal" />
-
 
             <TextView
                 android:id="@+id/dataTextView"
@@ -55,6 +49,19 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:text="No data" />
+
+            <DatePicker
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/datePicker"
+                android:layout_gravity="center_horizontal" />
+
+            <Switch
+                android:layout_width="209dp"
+                android:layout_height="wrap_content"
+                android:text="MultiData"
+                android:id="@+id/switch1"
+                android:layout_gravity="center_horizontal" />
 
 
         </LinearLayout>
