--- a/app/src/main/res/layout/activity_data_view.xml
+++ b/app/src/main/res/layout/activity_data_view.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     android:id="@+id/entire_view"
     tools:context="com.pixedar.weather.DataView">
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -21,10 +21,29 @@
             android:orientation="vertical">
 
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text=""
+                android:id="@+id/textView3"
+                android:layout_marginTop="0dp"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text=""
+                android:id="@+id/textView4"
+                android:layout_gravity="center_horizontal" />
+
             <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/chart"
                 android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
                 android:layout_height="270dp" />
+
 
             <com.github.mikephil.charting.charts.LineChart xmlns:chart="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/chart3"
@@ -41,27 +60,6 @@
                 android:id="@+id/chart2"
                 android:layout_width="match_parent"
                 android:layout_height="270dp" />
-
-
-            <TextView
-                android:id="@+id/dataTextView"
-                android:lines="2"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:text="No data" />
-
-            <DatePicker
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/datePicker"
-                android:layout_gravity="center_horizontal" />
-
-            <Switch
-                android:layout_width="209dp"
-                android:layout_height="wrap_content"
-                android:text="MultiData"
-                android:id="@+id/switch1"
-                android:layout_gravity="center_horizontal" />
 
 
         </LinearLayout>
